tests/baselines/reference/forInContinueStatements.errors.txt
tests/cases/conformance/statements/continueStatements/forInContinueStatements.ts(10,1): error TS7028: Unused label.
tests/cases/conformance/statements/continueStatements/forInContinueStatements.ts(18,5): error TS7028: Unused label.


==== tests/cases/conformance/statements/continueStatements/forInContinueStatements.ts (2 errors) ====
    for(var x in {}) {
        continue;
    }
    
    ONE:
    for(var x in {}) {
        continue ONE;
    }
    
    TWO:
    ~~~
!!! error TS7028: Unused label.
    THREE:
    for(var x in {}) {
        continue THREE;
    }
    
    FOUR:
    for(var x in {}) {
        FIVE:
        ~~~~
!!! error TS7028: Unused label.
        for(var x in {}) {
            continue FOUR;
        }
    }
    
    for(var x in {}) {
        SIX:
        for(var x in {}) continue SIX;
    }
    
    SEVEN:
    for (var x in {}) for (var x in {}) for (var x in {}) continue SEVEN;
    
    EIGHT:
    for (var x in {}){
        var fn = function () { }
        continue EIGHT;
    }
    